--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -1,18 +1,9 @@
 {% load staticfiles %}
 
 <!-- CSS via CDN -->
-<!-- Bootstrap core CSS -->
 
-<!-- Bootstrap Tables! Latest compiled and minified CSS -->
-<link rel="stylesheet" href="{% static 'css/bootstrap-table.min.css' %}">
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-<link rel="stylesheet" href="{% static 'css/bootstrap-table-accordion.css' %}" >
-
-<!-- Bootstrap DateTimePicker Widget -->
-<link href="{% static 'css/datetimepicker.css' %}" rel="stylesheet">
-
-<link href="{% static 'css/bootstrap-tour.min.css' %}" rel="stylesheet">
-<link href="{% static 'css/bootstrap-tour-custom.css' %}" rel="stylesheet">
+{#<link href="{% static 'css/bootstrap-tour.min.css' %}" rel="stylesheet">#}
+{#<link href="{% static 'css/bootstrap-tour-custom.css' %}" rel="stylesheet">#}
 
 <!-- Font Awesome -->
 <!-- http://fortawesome.github.io/Font-Awesome/ -->
@@ -20,14 +11,31 @@
 <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 
 {% if request.user.profile.dark_theme %}
-<link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
-<link href="{% static 'css/custom_slate.css' %}" rel="stylesheet">
+  <link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
 {% else %}
-<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-<link href="{% static 'css/custom.css' %}" rel="stylesheet">
+  <link
+      rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
+{% endif %}
+
+<!-- Bootstrap Tables -->
+<link rel="stylesheet" href="{% static 'css/bootstrap-table.min.css' %}">
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+<link rel="stylesheet" href="{% static 'css/bootstrap-table-accordion.css' %}" >
+
+{% if request.user.profile.dark_theme %}
+  <link href="{% static 'css/custom_slate.css' %}" rel="stylesheet">
+{% else %}
+  <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 {% endif %}
 
 <link href="{% static 'css/custom_common.css' %}" rel="stylesheet">
+
+<!-- Bootstrap DateTimePicker Widget -->
+<link href="{% static 'css/datetimepicker.css' %}" rel="stylesheet">
+
+
 
 <link rel="apple-touch-icon" sizes="57x57" href="{% static 'icon/apple-icon-57x57.png' %}">
 <link rel="apple-touch-icon" sizes="60x60" href="{% static 'icon/apple-icon-60x60.png' %}">
