--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -1,22 +1,29 @@
 {% load staticfiles %}
-
-<!-- Bootstrap core JavaScript
-================================================== -->
+<!-- ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-<!-- js via static files -->
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script
+			  src="https://code.jquery.com/jquery-2.2.4.min.js"
+			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+			  crossorigin="anonymous"></script>
+<script
+			  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+			  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+			  crossorigin="anonymous"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-
-<!-- js via CDN (TOO SLOW!)-->
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
 
 <!--https://github.com/chjj/marked-->
 {#<script src="{% static 'js/marked.min.js' %}"></script>#}
 
+
+<!-- ========================================================== -->
 <!-- Custom js -->
+
 <script src="{% static 'js/custom.js' %}"></script>
 
 {#<script src="{% static 'js/bootstrap-tour.min.js' %}"></script>#}
